maneging the numbers presentation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="btn8">8</string>
     <string name="btn9">9</string>
     <string name="btn0">0</string>
-    <string name="btnClr">c</string>
+    <string name="btnClr">ac</string>
     <string name="btnHistory">h</string>
     <string name="btnAdd">+</string>
     <string name="btnSub">-</string>
